[gd_scene load_steps=16 format=3 uid="uid://ccdst8jtti6cm"]

[ext_resource type="Script" path="res://demo/src/DemoScene.gd" id="1_k7qca"]
[ext_resource type="PackedScene" path="res://demo/components/World.tscn" id="2_2yeq8"]
[ext_resource type="PackedScene" path="res://demo/components/Borders.tscn" id="3_cw38j"]
[ext_resource type="PackedScene" path="res://demo/components/Player.tscn" id="3_ht63y"]
[ext_resource type="Script" path="res://scripts/WebSocketServerWrapper/WebSocketServer.gd" id="3_tqb7b"]
[ext_resource type="PackedScene" path="res://demo/components/UI.tscn" id="4_gk532"]
[ext_resource type="Terrain3DStorage" uid="uid://lalq1xnmbjdl" path="res://demo/data/terrain_storage.res" id="5_sl43a"]
[ext_resource type="Texture2D" path="res://demo/textures/ground037_alb_ht.dds" id="7_hqga3"]
[ext_resource type="Texture2D" path="res://demo/textures/ground037_nrm_rgh.dds" id="8_pd4vo"]
[ext_resource type="Texture2D" path="res://demo/textures/rock028_alb_ht.dds" id="9_rm006"]
[ext_resource type="Texture2D" path="res://demo/textures/rock028_nrm_rgh.dds" id="10_i3tb8"]
[ext_resource type="Script" path="res://scripts/Server.gd" id="11_rqsps"]

[sub_resource type="Terrain3DTexture" id="Terrain3DTexture_56fwf"]
albedo_texture = ExtResource("7_hqga3")
normal_texture = ExtResource("8_pd4vo")

[sub_resource type="Terrain3DTexture" id="Terrain3DTexture_x74kb"]
texture_id = 1
albedo_texture = ExtResource("9_rm006")
normal_texture = ExtResource("10_i3tb8")

[sub_resource type="Terrain3DTextureList" id="Terrain3DTextureList_6biym"]
textures = Array[Terrain3DTexture]([SubResource("Terrain3DTexture_56fwf"), SubResource("Terrain3DTexture_x74kb")])

[node name="Demo" type="Node"]
script = ExtResource("1_k7qca")

[node name="Server" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("11_rqsps")

[node name="WebSocketServer" type="Control" parent="Server"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_tqb7b")

[node name="ImageSenderTimer" type="Timer" parent="Server"]
wait_time = 0.1

[node name="World" parent="." instance=ExtResource("2_2yeq8")]

[node name="Borders" parent="." instance=ExtResource("3_cw38j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 512, 0, 512)

[node name="Player" parent="." instance=ExtResource("3_ht63y")]
transform = Transform3D(0.0774673, 0, -0.996995, 0, 1, 0, 0.996995, 0, 0.0774673, 253.094, 115.487, -1838.16)

[node name="UI" parent="." instance=ExtResource("4_gk532")]

[node name="Terrain3D" type="Terrain3D" parent="."]
storage = ExtResource("5_sl43a")
texture_list = SubResource("Terrain3DTextureList_6biym")
collision_mask = 3

[connection signal="client_connected" from="Server/WebSocketServer" to="Server" method="_on_web_socket_server_client_connected"]
[connection signal="client_disconnected" from="Server/WebSocketServer" to="Server" method="_on_web_socket_server_client_disconnected"]
[connection signal="message_received" from="Server/WebSocketServer" to="Server" method="_on_web_socket_server_message_received"]
[connection signal="timeout" from="Server/ImageSenderTimer" to="Server" method="_on_image_sender_timer_timeout"]
